# University

./: README.md
.ipynb_checkpoints/: KNN-checkpoint.ipynb
AISD/Pracownia/: PracA1.c  PracB1.c
AISD/Themis/: aisdinvitation  aisdinvitation.cpp
ASK/: askl1z1.c  askl1z2.c  askl1z3.c  askl1z5.c  askl1z6.c  askl1z7.c  askl2z1.c  askl2z2.c  askl2z3.c  askl2z5.c  askl2z7.c  askl2z9.c  readme.md
ASK/Lista1/: askl1z3.c  askl1z4.txt  askl1z5.c  askl1z8.c  dump1  dump2  prog1  prog2
ASK/Lista2/: askl2z6.c  askl2z8.c  askl2z9.c
ASK/Lista3/: askl3z1.c  askl3z2.c  askl3z3.c  askl3z5.c  askl3z6.c  askl3z7.c  askl3z8.c
ASK/Lista4/: aksl4z7_z_adc.s  askl4z1.txt  askl4z2.txt  askl4z3.txt  askl4z4.txt  askl4z5.c  askl4z6.c  askl4z6.s  askl4z7.asm  askl4z7.c  askl4z7.s  askl4z8.s  askl4z9.c  askl4z9.s  askl4z9movc.s  lis4z7.s  prog
ASK/Lista5/: askl5z1.c  (+14 more)
DataMiningSeminar/: KNN.ipynb
Laboratorium statystyczne 1/: Chmurki.gnumeric  Mikołaj_Słupiński_1.gnumeric  Mikołaj_Słupiński_2.gnumeric  Mikołaj_Słupiński_3.gnumeric  Mikołaj_Słupiński_3.xls  Spiewacy.gnumeric  masaz.gnumeric  wzrost.gnumeric
Numerki/: Simpson.jl  bairstow.jl  lufactor.jl  newtoncotes.jl  pn.jl  steffensen.jl
POO/: .~lock.Notatka do egzaminu.odt#  Notatka do egzaminu.odt
Podstawy Statystyki Praktycznej/: .Rhistory  Lista1.Rmd  Lista1.md  Lista1.r  Lista2.Rmd  Lista2.r  Lista3.Rmd  Lista4.Rmd  Lista5.Rmd  Lista6.R  Lista6.Rmd  Lista7.R  Lista7.Rmd
SimpleSniffer/: CMakeLists.txt  main.c  packetCapturing.c  packetCapturing.h  packetPrinting.c  packetPrinting.h  snifferInit.c  snifferInit.h
(+214 files in other folders)
